[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Weather_Icons/01n.png" type="Texture" id=2]
[ext_resource path="res://Weather_Icons/04d.png" type="Texture" id=3]
[ext_resource path="res://Weather_Icons/10n.png" type="Texture" id=4]
[ext_resource path="res://Weather_Icons/11d.png" type="Texture" id=5]
[ext_resource path="res://Weather_Icons/10d.png" type="Texture" id=6]
[ext_resource path="res://Weather_Icons/02d.png" type="Texture" id=7]
[ext_resource path="res://Weather_Icons/01d.png" type="Texture" id=8]
[ext_resource path="res://Weather_Icons/09d.png" type="Texture" id=9]
[ext_resource path="res://Weather_Icons/13d.png" type="Texture" id=10]
[ext_resource path="res://Weather_Icons/50d.png" type="Texture" id=11]
[ext_resource path="res://Weather_Icons/02n.png" type="Texture" id=12]
[ext_resource path="res://Weather_Icons/03d.png" type="Texture" id=13]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Border" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 448.0
color = Color( 0.0470588, 0.258824, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner_Color" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 432.0
color = Color( 0.0901961, 0.443137, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Weather_Icon" type="AnimatedSprite" parent="."]
position = Vector2( 128, 113 )
frames = SubResource( 1 )

[node name="ScreenRefreshTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="Data" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location" type="RichTextLabel" parent="Data"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 228.0
margin_top = 12.0
margin_right = 335.0
margin_bottom = 68.0
rect_scale = Vector2( 3, 3 )
custom_fonts/normal_font = SubResource( 2 )
text = "Location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temperature" type="RichTextLabel" parent="Data"]
margin_left = 266.0
margin_top = 212.0
margin_right = 394.0
margin_bottom = 283.0
custom_fonts/normal_font = SubResource( 3 )
text = "Temperature"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feels_Like" type="RichTextLabel" parent="Data"]
margin_left = 266.0
margin_top = 332.0
margin_right = 382.0
margin_bottom = 380.0
custom_fonts/normal_font = SubResource( 3 )
text = "Feels Like"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feels_Like_Data" type="RichTextLabel" parent="Data"]
margin_left = 440.0
margin_top = 332.0
margin_right = 556.0
margin_bottom = 380.0
custom_fonts/normal_font = SubResource( 3 )
text = "38 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temp_Data" type="RichTextLabel" parent="Data"]
margin_left = 440.0
margin_top = 212.0
margin_right = 556.0
margin_bottom = 275.0
custom_fonts/normal_font = SubResource( 3 )
text = "31 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weather" type="RichTextLabel" parent="Data"]
margin_left = 40.0
margin_top = 192.0
margin_right = 136.0
margin_bottom = 232.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 4 )
text = "Weather
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lat" type="RichTextLabel" parent="Data"]
margin_left = 40.0
margin_top = 288.0
margin_right = 78.0
margin_bottom = 322.0
custom_fonts/normal_font = SubResource( 5 )
text = "Lat: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lat_Input" type="TextEdit" parent="Data"]
margin_left = 80.0
margin_top = 283.0
margin_right = 224.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "28.58"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lon" type="RichTextLabel" parent="Data"]
margin_left = 40.0
margin_top = 368.0
margin_right = 78.0
margin_bottom = 402.0
custom_fonts/normal_font = SubResource( 5 )
text = "Lon:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lon_Input" type="TextEdit" parent="Data"]
margin_left = 80.0
margin_top = 363.0
margin_right = 224.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "77.33"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="ScreenRefreshTimer" to="." method="_on_ScreenRefreshTimer_timeout"]
[connection signal="focus_exited" from="Data/Lat_Input" to="." method="_on_Lat_Input_focus_exited"]
[connection signal="text_changed" from="Data/Lat_Input" to="." method="_on_Lat_Input_text_changed"]
[connection signal="focus_exited" from="Data/Lon_Input" to="." method="_on_Lon_Input_focus_exited"]
[connection signal="text_changed" from="Data/Lon_Input" to="." method="_on_Lon_Input_text_changed"]
